Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16558

Сan't set max_mod_rpcs_in_flight > 8 (Default value)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.16.0
    • Lustre 2.15.2
    • None
    • 1
    • 1
    • 9223372036854775807

      error: set_param: setting /sys/fs/lustre/mdc/lustre-MDT0000-mdc-ffff9d1e9e14b000/max_mod_rpcs_in_flight=16: Numerical result out of range
       conf-sanity test_90b: @@@@@@ FAIL: Unable to set max_mod_rpcs_in_flight to 16 
        Trace dump:
        = ./../tests/test-framework.sh:6549:error()
        = conf-sanity.sh:7139:check_max_mod_rpcs_in_flight()
        = conf-sanity.sh:7291:test_90b()
        = ./../tests/test-framework.sh:6887:run_one()
        = ./../tests/test-framework.sh:6937:run_one_logged()
        = ./../tests/test-framework.sh:6773:run_test()
        = conf-sanity.sh:7299:main()
      Dumping lctl log to /tmp/ltest-logs/conf-sanity.test_90b.*.1676457701.log
      Dumping logs only on local client.
      FAIL 90b (40s)
      LTEST: ssh exited 1

            vkuznetsov Vitaliy Kuznetsov
            vkuznetsov Vitaliy Kuznetsov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: